# GenomeKit

./: .gitignore  CONTRIBUTING.md  LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/genomekit/: master.py
src/genomekit/modules/: __init__.py  orf_predictor.py  primer_finder.py
tests/: test_orf_predictor.py  test_primer_finder.py
